Assignmnet1/Assignmnet1/log/build_2023-03-03_20-19-00/alicesim/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/soroush/ros2_ws/install/alicesim/lib/python3.10/site-packages/alicesim/subscriber_member_function.py", line 28
    		for i in range len(result) :
    		               ^^^
SyntaxError: invalid syntax

